kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jvnl
spec:
  selector:
    app: jvnl
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
